2003-08-28  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Minor correction to allow compilation with
	gcc < 3.x.

2003-08-28  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Cleanup some of the extra logs.
	* GormClassInspector.m: Add logic to prefent index out of bounds
	exception.

2003-08-27  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Corrected some memory related issues.
	* GormCustomClassManager.m: Added to log which informs
	user of a nil object returned from the name map.
	* Gorm.m: Cleaned up some comments and updated the version of
	the application.

2003-08-26  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Added some debug logs.  And in
	_replaceObjectsWithTemplates: modified the method to use the
	customClassMap call instead of accessing the map directly.
	* GormClassManager.m: renameClassNamed: and removeClassNamed: both
	were failing to delete the custom class associations when a custom
	class is renamed or removed.  Added the code to do this.
	* GormCustomClassInspector.m: Added check for nil return from the
	classManager.   Code will print a warning to stdout, if this happens.

2003-08-23  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Corrected selection problem.  Moved code to
	select item in classes view from GormInspectorManager.
	* GormInspectorManager.m: Removed the code from here.

2003-08-23  Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/Containers/main.m: added height resize flag
	to TextView prototype to correct bug #3270

2003-08-23  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.[hm]: Made selectClassWithObject public.
	* GormInspectorManager.m: Added logic to call selectClassWithObject
	so that when an object is selected, the classes view focuses on it.
	
2003-08-22  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: Removed extraneous release calls.  In most