@@ -1,3 +1,8 @@
+2003-08-30  Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormImageEditor.m: Minor correction to allow compilation with
+	gcc < 3.x. (found my Riccardo Mattola/grey_gandalf)
+
 2003-08-28  Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormDocument.m: Minor correction to allow compilation with
